# proxycast

./: .ai-code-verify.json  .gitignore  FIX_SUMMARY.md  README.md  RELEASE_NOTES.md  monitor.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
.husky/: pre-commit
docs/: README.md  TECH_SPEC.md  product-overview.md
docs/aiprompts/: components.md
docs/content/: index.md
docs/content/01.introduction/: 1.overview.md  2.installation.md  3.quickstart.md
docs/content/02.user-guide/: 1.dashboard.md  10.prompts.md  11.skills.md  12.settings.md  13.plugins.md  14.resources.md  (+10 more)
docs/develop/: execution-tracker-deprecation-plan.md  execution-tracker-p0-acceptance-report.md  execution-tracker-p1-p2-roadmap.md  execution-tracker-technical-plan.md  lobsterai-business-benchmark.md  scheduler-task-governance-p1.md
docs/prd/: proxycast-connect.md  unified-extension-platform.md
scripts/: ai-code-verify.schema.json  ai-code-verify.ts  ensure-dev-port.mjs  test-newapi-image.ts  types.ts
src/: App.tsx  RootRouter.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  install-local.sh  tauri.conf.headless.json  tauri.conf.json  test_serialize.rs
src-tauri/capabilities/: default.json
src-tauri/crates/agent/: Cargo.toml
src-tauri/crates/agent/src/: aster_state.rs  aster_state_support.rs  event_converter.rs  hooks.rs  lib.rs  session_store.rs  shell_security.rs  subagent_scheduler.rs  tool_permissions.rs
src-tauri/crates/agent/src/prompt/: builder.rs  instruction_discovery.rs  mod.rs
src-tauri/crates/agent/src/tools/: heartbeat_tool.rs  mod.rs
src-tauri/crates/app/: Cargo.toml
src-tauri/crates/app/src/: lib.rs
src-tauri/crates/processor/: Cargo.toml
src-tauri/crates/processor/src/: conversation_manager.rs  conversation_summarizer.rs  lib.rs  processor.rs
src-tauri/crates/processor/src/steps/: auth.rs  injection.rs  mod.rs  plugin.rs  provider.rs  registry.rs  routing.rs  telemetry.rs  traits.rs
src-tauri/crates/server/: Cargo.toml
src-tauri/crates/server/src/: client_detector.rs  lib.rs
src-tauri/crates/server/src/auth/: pairing.rs
src-tauri/crates/server/src/handlers/: api.rs  batch_api.rs  credentials_api.rs  image_handler.rs  kiro_credential.rs  management.rs  mod.rs  provider_calls.rs  websocket.rs
src-tauri/crates/server/src/middleware/: mod.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  dev_bridge.rs  lib.rs  logger.rs  server.rs  server_utils.rs
src-tauri/tests/: api_key_provider_tests.rs  aster_client_tests.rs
src/components/: AppSidebar.tsx  Dashboard.tsx  Logs.tsx  Providers.tsx  Settings.tsx  Sidebar.tsx
src/hooks/: index.ts  useApiKeyProvider.ts  useConfiguredProviders.ts  useFlowEvents.ts  useModelRegistry.ts  useProjects.ts  useProviderModels.ts  useSound.ts  useTauri.ts  useVoiceSound.ts
src/pages/: FlowMonitorPage.tsx  README.md  index.ts  smart-input.css  smart-input.tsx
src/stores/: agentStore.ts
src/types/: page.ts  settings.ts
(+624 files in other folders)
