[package]
name = "proxycast-processor"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
proxycast-core.workspace = true
proxycast-infra.workspace = true
proxycast-services.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
subtle.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
