[package]
name = "proxycast-server"
version.workspace = true
edition.workspace = true

[dependencies]
proxycast-core.workspace = true
proxycast-config.workspace = true
proxycast-infra.workspace = true
proxycast-providers.workspace = true
proxycast-services.workspace = true
proxycast-credential.workspace = true
proxycast-websocket.workspace = true
proxycast-processor.workspace = true
proxycast-server-utils.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
chrono.workspace = true
uuid.workspace = true
base64.workspace = true
bytes.workspace = true
regex.workspace = true
subtle.workspace = true
async-stream.workspace = true
urlencoding.workspace = true
parking_lot.workspace = true
tokio-util.workspace = true
dirs.workspace = true

[dev-dependencies]
proptest.workspace = true
